2008-04-01  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gamessinputdialog.cpp: Correct bug where
	nd was also being used to set np in the basic tab.

2008-03-23  Donald E. Curtis <dcurtis3@sourceforge.net>

	* avogadro/src/mainwindow.cpp: when extensions reqest a new menu item they
	are put in before the settings menu.

	* libavogadro/src/extensions/pythonextension.*: the python extension now
	searches $prefix/share/libavogadro-VERSION/scripts and
	$HOME/.avogadro/scripts for python scripts to load.  There are some
	examples in the libavogadro/src/extensions/python/ directory.

	* libavogadro/src/pythoninterpreter.*: made some fixes and updates to the
	python interpreter to allow evaluation and execution easier with custom
	local namespaces.

2008-03-22  Donald E. Curtis <dcurtis3@sourceforge.net>

	* avogadro/src/mainwindow.cpp: fixed bug with dock window loading being
	in the wrong loop.

	* libavogadro/src/tool.h: make setMolecule a slot

	* libavogadro/src/extension.[cpp|h]: make Extension a QObject and
	get ready for the library.  added setMolecule function.

	+ libavogadro/src/extensions: move extenstions to the library

	* libavogadro/src/extensions/*: modify extensions to use a signal to emit
	messages and utilize the setMolecule function.

2008-03-21  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* testfiles/ch3cl.cube.gz: Deleted incorrect test file.

	* testfiles/multicube.cubes.gz: Added new multi-cube test file
	supplied by Louis Ricard.

	* libavogadro/src/tools/selectrotatetool.cpp: Modified the selection
	behaviour to more closely match other applications. Clicking on atoms
	and drawing boxes now selects just the primitives in that area,
	holding down shift adds the new primitives to the selection.

2008-03-12  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/extensions/wiitrackextension.*: Wiimote head tracking
	extension.

	* avogadro/src/extensions/CMakeLists.txt: Do not compile Wiimote